# aoc2022-cpp

./: .gitignore  CMakeLists.txt  README.md  conanfile.txt
src/: aoc2022-cpp.cpp  aoc2022-cpp.h  aoc2022.hpp  day_01.cpp  day_02.cpp  main.cpp
